--- a/report/CUCitations.bib
+++ b/report/CUCitations.bib
@@ -1141,3 +1141,19 @@
   volume     = {abs/1502.04681},
   year       = {2015}
 }
+
+@article{DBLP:journals/corr/EitelHB17,
+  author     = {Andreas Eitel and
+                Nico Hauff and
+                Wolfram Burgard},
+  bibsource  = {dblp computer science bibliography, https://dblp.org},
+  biburl     = {https://dblp.org/rec/journals/corr/EitelHB17.bib},
+  eprint     = {1707.08101},
+  eprinttype = {arXiv},
+  journal    = {CoRR},
+  timestamp  = {Mon, 13 Aug 2018 16:47:45 +0200},
+  title      = {Learning to Singulate Objects using a Push Proposal Network},
+  url        = {http://arxiv.org/abs/1707.08101},
+  volume     = {abs/1707.08101},
+  year       = {2017}
+}
