New LSTM model and metrics methods
Signed-off-by: Alexis Balayre <60859013+AlexisBal@users.noreply.github.com>

--- a/code/data_utils/dataset_preparation.ipynb
+++ b/code/data_utils/dataset_preparation.ipynb
@@ -16,6 +16,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frames per second using video.get(cv2.CAP_PROP_FPS): 30.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "# Print the frame rate (FPS) of the video\n",
+    "def print_fps(video_path):\n",
+    "    cap = cv2.VideoCapture(video_path)\n",
+    "    if not cap.isOpened():\n",
+    "        print(f\"Error: Could not open video file {video_path}\")\n",
+    "        return\n",
+    "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "    if fps == 0:\n",
+    "        print(\"Error: Could not retrieve FPS information\")\n",
+    "    else:\n",
+    "        print(f\"Frames per second using video.get(cv2.CAP_PROP_FPS): {fps}\")\n",
+    "    cap.release()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    video_path = \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/test_indoor1.avi\"\n",
+    "    print_fps(video_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -842,15 +876,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['Close', 'Open', 'Semi-Open'])\n",
-      "{'train': 1178, 'val': 310, 'test': 314}\n"
+      "Nombre d'images par classe dans chaque ensemble :\n",
+      "Train:\n",
+      "  Close : 3662 images\n",
+      "  Open : 1722 images\n",
+      "  Semi-Open : 1178 images\n",
+      "Val:\n",
+      "  Close : 816 images\n",
+      "  Open : 310 images\n",
+      "  Semi-Open : 372 images\n",
+      "Test:\n",
+      "  Close : 802 images\n",
+      "  Open : 314 images\n",
+      "  Semi-Open : 383 images\n"
      ]
     }
    ],
@@ -876,34 +921,6 @@
     "        for split in [\"train\", \"val\", \"test\"]:\n",
     "            dataset[key][split] = collect_images(folder, split)\n",
     "\n",
-    "    # Trouver le nombre minimum d'images pour chaque split\n",
-    "    min_counts = {\n",
-    "        split: min(len(dataset[key][split]) for key in dataset.keys())\n",
-    "        for split in [\"train\", \"val\", \"test\"]\n",
-    "    }\n",
-    "\n",
-    "    # Calculer le nombre total d'images à utiliser\n",
-    "    total_images = sum(min_counts.values())\n",
-    "\n",
-    "    # Calculer les nombres cibles pour chaque split\n",
-    "    target_counts = {\n",
-    "        \"train\": int(total_images * train_ratio),\n",
-    "        \"val\": int(total_images * val_ratio),\n",
-    "        \"test\": int(total_images * test_ratio)\n",
-    "    }\n",
-    "\n",
-    "    # Ajuster les nombres pour atteindre les ratios cibles tout en respectant les minimums\n",
-    "    for split in [\"train\", \"val\", \"test\"]:\n",
-    "        target_counts[split] = min(target_counts[split], min_counts[split])\n",
-    "\n",
-    "    # Équilibrer les splits\n",
-    "    balanced_dataset = {key: {split: [] for split in [\"train\", \"val\", \"test\"]} for key in dataset.keys()}\n",
-    "    for split in [\"train\", \"val\", \"test\"]:\n",
-    "        for key in dataset.keys():\n",
-    "            print(f\"Balancing {key} {split}...\")\n",
-    "            random.shuffle(dataset[key][split])\n",
-    "            balanced_dataset[key][split] = dataset[key][split][:target_counts[split]]\n",
-    "\n",
     "    # Copier les fichiers vers la destination au format YOLO\n",
     "    for split in [\"train\", \"val\", \"test\"]:\n",
     "        yolo_split = \"val\" if split == \"val\" else split\n",
@@ -913,8 +930,8 @@
     "        os.makedirs(labels_folder, exist_ok=True)\n",
     "\n",
     "        with open(os.path.join(dest_folder, f\"{yolo_split}.txt\"), \"w\") as f:\n",
-    "            for key in balanced_dataset.keys():\n",
-    "                for image_path in balanced_dataset[key][split]:\n",
+    "            for key in dataset.keys():\n",
+    "                for image_path in dataset[key][split]:\n",
     "                    image_name = os.path.basename(image_path)\n",
     "                    label_name = os.path.splitext(image_name)[0] + \".txt\"\n",
     "                    label_path = os.path.join(os.path.dirname(os.path.dirname(image_path)), \"labels\", label_name)\n",
@@ -944,18 +961,8 @@
     "        yolo_split = \"val\" if split == \"val\" else split\n",
     "        print(f\"{yolo_split.capitalize()}:\")\n",
     "        for key in source_folders:\n",
-    "            print(f\"  {key} : {len(balanced_dataset[key][split])} images\")\n",
-    "\n",
-    "    # Calculer et imprimer les ratios réels\n",
-    "    total_images = sum(len(balanced_dataset[key][split]) for key in balanced_dataset for split in balanced_dataset[key])\n",
-    "    actual_ratios = {\n",
-    "        split: sum(len(balanced_dataset[key][split]) for key in balanced_dataset) / total_images\n",
-    "        for split in [\"train\", \"val\", \"test\"]\n",
-    "    }\n",
-    "    print(\"\\nRatios réels :\")\n",
-    "    print(f\"Train : {actual_ratios['train']:.2f}\")\n",
-    "    print(f\"val : {actual_ratios['val']:.2f}\")\n",
-    "    print(f\"Test : {actual_ratios['test']:.2f}\") \n",
+    "            print(f\"  {key} : {len(dataset[key][split])} images\")\n",
+    " \n",
     "\n",
     "# Exemple d'utilisation\n",
     "source_folders = {\n",
@@ -964,7 +971,7 @@
     "    \"Semi-Open\": \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/full_dataset_annotated_YOLO/semiopen\",\n",
     "}\n",
     "\n",
-    "destination_folder_path = \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/full_dataset_annotated_YOLO/balanced_dataset\"\n",
+    "destination_folder_path = \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/full_dataset_annotated_YOLO/evalutation_dataset\"\n",
     "\n",
     "# Spécifiez vos ratios désirés ici\n",
     "train_ratio = 0.7\n",
